# sfexec

./: .gitignore  Makefile  README.md  TODO  generator  generator-v0.1.0  generator-v0.1.0.gpg  generator-v0.1.0.sha256  generator-v0.2.0  generator-v0.2.0.gpg  generator-v0.2.0.sha256  generator-v1.0.0  generator-v1.0.0.gpg  generator-v1.0.0.sha256  get-deps  main.cpp  sfexec-create  sfexec-create-compress
generator/: Program.cs
generator-native/: Cargo.toml  file.h
generator-native/src/: arg.rs  main.rs
generator-native/src/hash/: mod.rs
generator-native/src/iter/: file.rs  group.rs  mod.rs  read.rs
generator-native/src/opt/: mod.rs
generator-native/src/translate/: mod.rs  sanitise.rs
include/: sha256.h  sha256_literal.h
