[package]
name = "generator-native"
version = "0.1.0"
authors = ["Avril <flanchan@cumallover.me>"]
license = "GPL 3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heaparray = { git = "https://github.com/notflan/heaparray" }
