[package]
name = "generator-native"
version = "1.0.0"
authors = ["Avril <flanchan@cumallover.me>"]
license = "GPL 3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
hash = ["sha2"]

[dependencies]
sha2 = { version = "^0.8", optional = true }
